// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PhoneIntegrationVoicemail/> render() should render with TTS type 1`] = `
<div
  class="full-width"
>
  <div
    class="d-flex align-items-center justify-content-between flex-wrap page-header"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Phone
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          🍏
           
          Fake phone integration
          <small
            class="text-muted ml-2"
          >
            (415) 111-2222
          </small>
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/preferences"
    >
      Preferences
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/voicemail"
    >
      Voicemail
    </a>
  </nav>
  <div
    class="page-container container-fluid"
  >
    <div
      class="heading row"
    >
      <div
        class="col"
      >
        Set Voicemail
      </div>
    </div>
    <div
      class="description row"
    >
      <div
        class="col"
      >
        Create a voicemail by uploading an .MP3 file or typing out the message with Text to speech.
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-xl-7"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <div
              class="col"
            >
              <input
                class="form-check-input"
                id="voiceRecordingType"
                name="voicemail_type"
                type="radio"
              />
              <label
                class=""
                for="voiceRecordingType"
              >
                Insert Voice Recording
              </label>
            </div>
          </div>
          <div
            class="form-group"
          >
            <div
              class="col"
            >
              <input
                class="form-check-input"
                id="textToSpeechType"
                name="voicemail_type"
                type="radio"
              />
              <label
                class=""
                for="textToSpeechType"
              >
                Text To Speech
              </label>
            </div>
            <div
              class="col"
            >
              <textarea
                class="form-control"
                id="textToSpeechContent"
                maxlength="1000"
                name="text_to_speech_content"
                rows="2"
              >
                Hello world!
              </textarea>
            </div>
          </div>
          <div
            class="heading"
          >
            Caller Options
          </div>
          <div
            class="form-check"
            color=""
          >
            <label
              class="control-label form-check-label"
              for="id-input-2"
            >
              <input
                checked=""
                class="form-check-input form-check-input"
                id="id-input-2"
                type="checkbox"
              />
              <span
                style="vertical-align: middle;"
              >
                Allow caller to leave voicemail
              </span>
            </label>
          </div>
          <button
            class="mt-5 btn btn-success"
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneIntegrationVoicemail/> render() should render with default values 1`] = `
<div
  class="full-width"
>
  <div
    class="d-flex align-items-center justify-content-between flex-wrap page-header"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Phone
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          🍏
           
          Fake phone integration
          <small
            class="text-muted ml-2"
          >
            (415) 111-2222
          </small>
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/preferences"
    >
      Preferences
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/voicemail"
    >
      Voicemail
    </a>
  </nav>
  <div
    class="page-container container-fluid"
  >
    <div
      class="heading row"
    >
      <div
        class="col"
      >
        Set Voicemail
      </div>
    </div>
    <div
      class="description row"
    >
      <div
        class="col"
      >
        Create a voicemail by uploading an .MP3 file or typing out the message with Text to speech.
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-xl-7"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <div
              class="col"
            >
              <input
                class="form-check-input"
                id="voiceRecordingType"
                name="voicemail_type"
                type="radio"
              />
              <label
                class=""
                for="voiceRecordingType"
              >
                Insert Voice Recording
              </label>
            </div>
          </div>
          <div
            class="form-group"
          >
            <div
              class="col"
            >
              <input
                class="form-check-input"
                id="textToSpeechType"
                name="voicemail_type"
                type="radio"
              />
              <label
                class=""
                for="textToSpeechType"
              >
                Text To Speech
              </label>
            </div>
            <div
              class="col"
            >
              <textarea
                class="form-control"
                id="textToSpeechContent"
                maxlength="1000"
                name="text_to_speech_content"
                rows="2"
              >
                Hello world!
              </textarea>
            </div>
          </div>
          <div
            class="heading"
          >
            Caller Options
          </div>
          <div
            class="form-check"
            color=""
          >
            <label
              class="control-label form-check-label"
              for="id-input-1"
            >
              <input
                checked=""
                class="form-check-input form-check-input"
                id="id-input-1"
                type="checkbox"
              />
              <span
                style="vertical-align: middle;"
              >
                Allow caller to leave voicemail
              </span>
            </label>
          </div>
          <button
            class="mt-5 btn btn-success"
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`<PhoneIntegrationVoicemail/> render() should render with voice recording type 1`] = `
<div
  class="full-width"
>
  <div
    class="d-flex align-items-center justify-content-between flex-wrap page-header"
  >
    <nav
      aria-label="breadcrumb"
      class=""
    >
      <ol
        class="breadcrumb"
      >
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations"
          >
            Integrations
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          <a
            to="/app/settings/integrations/phone"
          >
            Phone
          </a>
        </li>
        <li
          class="breadcrumb-item"
        >
          🍏
           
          Fake phone integration
          <small
            class="text-muted ml-2"
          >
            (415) 111-2222
          </small>
        </li>
      </ol>
    </nav>
  </div>
  <nav
    class="navbar navbar"
  >
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/preferences"
    >
      Preferences
    </a>
    <a
      activeclassname="active"
      class="link"
      to="/app/settings/integrations/phone/1/voicemail"
    >
      Voicemail
    </a>
  </nav>
  <div
    class="page-container container-fluid"
  >
    <div
      class="heading row"
    >
      <div
        class="col"
      >
        Set Voicemail
      </div>
    </div>
    <div
      class="description row"
    >
      <div
        class="col"
      >
        Create a voicemail by uploading an .MP3 file or typing out the message with Text to speech.
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-lg-6 col-xl-7"
      >
        <form
          class=""
        >
          <div
            class="form-group"
          >
            <div
              class="col"
            >
              <input
                class="form-check-input"
                id="voiceRecordingType"
                name="voicemail_type"
                type="radio"
              />
              <label
                class=""
                for="voiceRecordingType"
              >
                Insert Voice Recording
              </label>
            </div>
            <div
              class="col"
            >
              <audio
                controls=""
                src="test_file.mp3"
              />
              <div
                class="mt-2"
              >
                <input
                  accept=".mp3"
                  class="d-none"
                  name="new_voice_recording_file"
                  type="file"
                />
                <button
                  class="btn btn-secondary"
                  type="button"
                >
                  <i
                    class="material-icons large"
                  >
                    backup
                  </i>
                   
                  Select file
                </button>
              </div>
            </div>
          </div>
          <div
            class="form-group"
          >
            <div
              class="col"
            >
              <input
                class="form-check-input"
                id="textToSpeechType"
                name="voicemail_type"
                type="radio"
              />
              <label
                class=""
                for="textToSpeechType"
              >
                Text To Speech
              </label>
            </div>
          </div>
          <div
            class="heading"
          >
            Caller Options
          </div>
          <div
            class="form-check"
            color=""
          >
            <label
              class="control-label form-check-label"
              for="id-input-3"
            >
              <input
                checked=""
                class="form-check-input form-check-input"
                id="id-input-3"
                type="checkbox"
              />
              <span
                style="vertical-align: middle;"
              >
                Allow caller to leave voicemail
              </span>
            </label>
          </div>
          <button
            class="mt-5 btn btn-success"
            type="submit"
          >
            Save changes
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
